[package]
authors = ["GHOST"]
edition = "2021"
name = "mnemonic-worker"
version = "0.1.0"

[dependencies]
cfg-if = "0.1.2"
worker = "0.0.9"
mnemonic = "1.0.1"
serde_json = "1.0.67"
regex = "1.6.0"
getrandom = { version = "0.2.7", features = ["js"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }

[features]
default = ["console_error_panic_hook"]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
